fixed iframe overflow

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -16,4 +16,9 @@
         text-align: center;
     }
 
+    iframe {
+        max-width: 95%;
+   
+    }
+
 }
